fix scroll snap on mobile 2, fix hire us underline

--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -72,6 +72,8 @@
 
     &::after {
       content: "";
+      position: absolute;
+      bottom: -8px;
       height: 2px;
       width: 100%;
       background-color: $c-salmon-pink;
