--- a/src/styles/blocks/slide.scss
+++ b/src/styles/blocks/slide.scss
@@ -1,3 +1,5 @@
 .slide {
-  scroll-snap-align: center;
+  @media (hover: hover) and (pointer: fine) {
+    scroll-snap-align: center;
+  }
 }
